@startuml ReservaEspacios_ER
' Diagrama Entidad-Relación — Sistema de Reservas de Espacios FEI/UV
' Generado para reflejar el modelo final implementado.

hide circle
skinparam linetype ortho

entity USUARIO {
  * id_usuario : INT <<PK>>
  --
  nombre : VARCHAR
  correo : VARCHAR <<UNIQUE>>
  contrasena : VARCHAR
  estado : ENUM(Activo, Bloqueado)
  fecha_registro : DATETIME
}

entity ADMINISTRADOR {
  * id_admin : INT <<PK>>
  --
  nombre : VARCHAR
  correo : VARCHAR <<UNIQUE>>
  contrasena : VARCHAR
  estado : ENUM(Activo, Bloqueado)
  fecha_registro : DATETIME
}

entity ESPACIO {
  * id_espacio : INT <<PK>>
  --
  nombre : VARCHAR
  tipo : VARCHAR
  capacidad : INT
  ubicacion : VARCHAR
  descripcion : VARCHAR
  estado : ENUM(Disponible, Inactivo)
  hora_apertura : TIME
  hora_cierre : TIME
}

entity DIA_OPERACION_ESPACIO {
  * id_espacio : INT <<PK,FK>>
  * dia_semana : ENUM <<PK>>
}

entity FECHA_NO_SERVICIO {
  * id_fecha_no_servicio : INT <<PK>>
  --
  fecha_inicio : DATE
  fecha_fin : DATE
  hora_inicio : TIME <<NULL>>
  hora_fin : TIME <<NULL>>
  tipo : ENUM(Feriado, Vacaciones, Suspension, Mantenimiento, EventoInstitucional)
  motivo : VARCHAR
  id_admin : INT <<FK>>
  fecha_registro : DATETIME
}

entity RESERVACION {
  * id_reservacion : INT <<PK>>
  --
  id_usuario : INT <<FK>>
  id_espacio : INT <<FK>>
  tipo_evento : ENUM(Normal, UV)
  fecha : DATE
  hora_inicio : TIME
  hora_fin : TIME
  motivo : VARCHAR
  estado_reservacion : ENUM(Activa, Cancelada, Finalizada, Pendiente)
  estado_aprobacion : ENUM(NA, Pendiente, Aprobada, Rechazada)
  se_realizo : ENUM(Pendiente, Realizada, NoRealizada)
  motivo_cancelacion : VARCHAR <<NULL>>
  id_grupo_reserva : INT <<NULL>>
  fecha_registro : DATETIME
}

entity APELACION {
  * id_apelacion : INT <<PK>>
  --
  id_reservacion : INT <<FK>>
  id_usuario : INT <<FK>>
  justificacion : VARCHAR
  estado_apelacion : ENUM(Pendiente, Aprobada, Rechazada)
  fecha_apelacion : DATETIME
  fecha_resolucion : DATETIME <<NULL>>
  id_admin : INT <<FK, NULL>>
}

entity HISTORIAL_BLOQUEO {
  * id_bloqueo : INT <<PK>>
  --
  id_usuario : INT <<FK>>
  id_admin : INT <<FK>>
  tipo_accion : ENUM(Bloqueo, Desbloqueo)
  motivo : VARCHAR
  fecha_accion : DATETIME
}

USUARIO ||--o{ RESERVACION
ESPACIO ||--o{ RESERVACION
ESPACIO ||--o{ DIA_OPERACION_ESPACIO
RESERVACION ||--o{ APELACION
USUARIO ||--o{ APELACION
ADMINISTRADOR ||--o{ APELACION
USUARIO ||--o{ HISTORIAL_BLOQUEO
ADMINISTRADOR ||--o{ HISTORIAL_BLOQUEO
ADMINISTRADOR ||--o{ FECHA_NO_SERVICIO

@enduml
